# YoutubeDiscordBot

./: .gitignore  Cargo.toml  README.md
src/: configuration.rs  fetch.rs  lib.rs  main.rs  startup.rs
src/base/: check_for_new_video.rs  fetch.rs  is_new_video_uploaded.rs  mod.rs  send_message.rs  use_config.rs
